refactor: footer responsive on mobile

--- a/src/app/components/main-footer/main-footer.html
+++ b/src/app/components/main-footer/main-footer.html
@@ -3,6 +3,7 @@
     <img class="footerImage" src="assets/images/home/overfooter.png" alt="Footer Overlay">
 
     <div class="footer-content">
+        <!-- LOGO SECTION -->
         <div class="footer-section logo-section">
             <img src="assets/images/home/HytecLogo.png" alt="Hytec Logo">
             <div class="social-icons">
@@ -25,49 +26,98 @@
             </div>
         </div>
 
-
+        <!-- SOLUTIONS SECTION -->
         <div class="footer-section">
-            <h3 class="sdisplay">Solutions</h3>
-            <ul>
-                <li class="mediumEmphasizedTitle"><a routerLink="/solutions/educational">Educational Solutions</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/solutions/industrial">Industrial Solutions</a></li>
+            <h3 
+                [class.expanded]="isSectionExpanded('solutions')"
+                (click)="toggleSection('solutions')">
+                Solutions
+            </h3>
+            <ul [class.expanded]="isSectionExpanded('solutions')">
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/solutions/educational">Educational Solutions</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/solutions/industrial">Industrial Solutions</a>
+                </li>
             </ul>
         </div>
 
+        <!-- NEWS & UPDATES SECTION -->
         <div class="footer-section">
-            <h3 class="sdisplay">News & Updates</h3>
-            <ul>
-                <li class="mediumEmphasizedTitle"><a routerLink="/news-and-updates">Featured News & Solutions</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/news-and-updates">Announcements</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/news-and-updates">Educational News</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/news-and-updates">Industrial News</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/news-and-updates">E-Magazines</a></li>
+            <h3 
+                [class.expanded]="isSectionExpanded('news')"
+                (click)="toggleSection('news')">
+                News & Updates
+            </h3>
+            <ul [class.expanded]="isSectionExpanded('news')">
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/news-and-updates">Featured News & Solutions</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/news-and-updates">Announcements</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/news-and-updates">Educational News</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/news-and-updates">Industrial News</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/news-and-updates">E-Magazines</a>
+                </li>
             </ul>
         </div>
 
+        <!-- TRAININGS & EVENTS SECTION -->
         <div class="footer-section">
-            <h3 class="sdisplay">Trainings & Events</h3>
-            <ul>
-                <li class="mediumEmphasizedTitle"><a routerLink="/trainings-and-events">Featured Trainings & Events</a>
+            <h3 
+                [class.expanded]="isSectionExpanded('trainings')"
+                (click)="toggleSection('trainings')">
+                Trainings & Events
+            </h3>
+            <ul [class.expanded]="isSectionExpanded('trainings')">
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/trainings-and-events">Featured Trainings & Events</a>
                 </li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/trainings-and-events">Latest Educational Trainings</a>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/trainings-and-events">Latest Educational Trainings</a>
                 </li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/trainings-and-events">Latest Industrial Trainings</a>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/trainings-and-events">Latest Industrial Trainings</a>
                 </li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/trainings-and-events">Hytec Events</a></li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/trainings-and-events">Hytec Events</a>
+                </li>
             </ul>
         </div>
 
+        <!-- COMPANY SECTION -->
         <div class="footer-section">
-            <h3 class="sdisplay">Our Company</h3>
-            <ul>
-                <li class="mediumEmphasizedTitle"><a routerLink="/about-us">About Us</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/about-us">Testimonials</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/company/careers">Careers</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/company/team">Team</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/company/project-and-case-studies">Projects & Case
-                        Studies</a></li>
-                <li class="mediumEmphasizedTitle"><a routerLink="/company/our-contacts">Our Contacts</a></li>
+            <h3 
+                [class.expanded]="isSectionExpanded('company')"
+                (click)="toggleSection('company')">
+                Our Company
+            </h3>
+            <ul [class.expanded]="isSectionExpanded('company')">
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/about-us">About Us</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/about-us">Testimonials</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/company/careers">Careers</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/company/team">Team</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/company/project-and-case-studies">Projects & Case Studies</a>
+                </li>
+                <li class="mediumEmphasizedTitle">
+                    <a routerLink="/company/our-contacts">Our Contacts</a>
+                </li>
             </ul>
         </div>
     </div>
